Add vm options