@@ -13,4 +13,6 @@ graph LR;
     A((User))-->|/qr/find|B(QrCodeReader);
 ```
 
+VM Options:
 
+    -Xmx72m -Xlog:gc*:file=logsgc.log:tags,uptime,time,level:filecount=1,filesize=50m
